warning fixes